--- a/src/main/webapp/solarized-light.css
+++ b/src/main/webapp/solarized-light.css
@@ -4,6 +4,9 @@
   --solarized-secondary: var(--solarized-base0);
   --solarized-card: var(--solarized-bg);
 
+  /* Tab bar */
+  --tabs-item-background--selected: var(--background);
+
   /* Colors */
   --yellow:  #ad8900;
   --orange:  #c25d1e;
@@ -21,6 +24,9 @@
     --solarized-primary: var(--solarized-base01);
     --solarized-secondary: var(--solarized-base0);
     --solarized-card: var(--solarized-bg);
+
+    /* Tab bar */
+    --tabs-item-background--selected: var(--background);
 
     /* Colors */
     --yellow:  #ad8900;
